manifest/angular/angular.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: angular
          image: reg.iranops.ir/fleetman/angular:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      imagePullSecrets:
        - name: harbor-secret 

---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  type: NodePort
  selector:
    app: webapp
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30000  
  externalIPs:
    - 192.168.60.134
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          # Route API requests to api-gateway
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: fleetman-api-gateway
                port:
                  number: 8080
          
          # Route all other requests to angular webapp
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 80
